# chat

./: .env  Cargo.toml  _typos.toml  cliff.toml  commit_log.txt  deny.toml  init.sql  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  test.rest
chat_server/examples/: rfind_examples.rs
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs
chat_server/src/middleware/: mod.rs  server_time.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml
migrations/: 20240426045903_initial.sql  20240616160040_initial.sql  20240917110208_init.sql  20241211164048_init.sql  20241217051554_workspace.sql  20250106121152_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  sse.rs
src/: config.rs  main.rs
