[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["http2", "query", "tracing", "multipart"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres" ] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
