[workspace]
members = [ "chat_core","chat_server", "notify_server"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  # "macros",
] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = {version = "0.4.39", features = ["serde"]}
chat-core = { path = "./chat_core" }
jwt-simple = { version = "0.12.11", default-features = false, features = ["pure-rust"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-full", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
